--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -10,7 +10,7 @@
     <link rel="alternate icon" href="favicon.ico">
     
     <!-- Meta CSP atualizada para WSL -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://172.25.132.243:8000 ws://172.25.132.243:8000; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; font-src 'self' fonts.gstatic.com cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' http://172.25.132.243:8000 ws://172.25.132.243:8000;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:8000 ws://localhost:8000; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; font-src 'self' fonts.gstatic.com cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' http://localhost:8000 ws://localhost:8000;">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -108,7 +108,7 @@
     <div id="notificationContainer" class="notification-container"></div>
 
     <!-- JavaScript -->
-    <script src="assets/js/config.js?v=11"></script>
+    <script src="assets/js/config.js?v=12"></script>
     <script src="assets/js/auth-manager.js?v=11"></script>
     <script src="assets/js/api.js?v=11"></script>
     <script src="assets/js/auth.js?v=11"></script>
