--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; 
         font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; 
         img-src 'self' data: blob:; 
-        connect-src 'self' http://localhost:8000 http://172.25.132.243:8000;
+        connect-src 'self' http://localhost:8000 ws://localhost:8000;
     ">
     
     <!-- Favicon -->
@@ -550,7 +550,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/config.js?v=10"></script>
+    <script src="assets/js/config.js?v=12"></script>
     <script src="assets/js/auth-manager.js?v=10"></script>
     <script src="assets/js/api.js?v=10"></script>
     <script src="assets/js/auth.js?v=10"></script>
